--- a/templates/base.html
+++ b/templates/base.html
@@ -3,9 +3,12 @@
 <head>
     <title>{% block title %}{% endblock %}</title>
     <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <!--meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"-->
+  <meta name="viewport" content="width=device-width, initial-scale=1 shrink-to-fit=yes">
   <meta name="description" content="">
+  <meta name="mobile-web-app-capable" content="yes">
     <meta name="author" content="">
+    <link rel="shortcut icon" href="#">
   <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
@@ -20,6 +23,7 @@
   <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/fixedheader/3.1.2/css/fixedHeader.dataTables.min.css">
   <!--link rel="stylesheet"  href="{{ url_for('static', filename='css/Data_Tables.css') }}"-->
   <link rel="stylesheet"  href="{{ url_for('static', filename='css/StyleSheet.css') }}">
+  <link rel="shortcut icon" sizes="196x196" href="{{ url_for('static', filename='images/appicon.png') }}">
 
 
     {% block css %}
@@ -29,7 +33,7 @@
 <body>
 
 <nav class="navbar navbar-expand navbar-dark bg-1">
-  <a class="navbar-brand" href={% block href %}/{% endblock %}>Flow Vis</a>
+  <a class="navbar-brand" href={% block href %}/{% endblock %}>{% block navhead %}Flow Vis{% endblock %}</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample02" aria-controls="navbarsExample02" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
