--- a/templates/item_history.html
+++ b/templates/item_history.html
@@ -2,7 +2,7 @@
 
 {% block title %}Flow Vis{% endblock %}
 
-{% block navhead %}Logged in: {{  session["UserName"]  }}{% endblock %}
+
 
 {% block href %}"{{  url_for('users_file.dashboard', org_name=session["OrgName"])  }}"{% endblock %}
 
@@ -23,7 +23,11 @@
 
 <div class = "col-md-12">
 	<center>
-	    <h2 style="margin-top:10px;">{{  items_history_name[1]  }} {{  items_history_name[2]  }} History:</h2><br>
+	    <h2 style="margin-top:10px;">Item History</h2>
+
+	    <p>line reference number: <span class="item_history">{{  items_history_name[1]  }}</span></p>
+        <p class="pad">aluminium system: <span class="item_history">{{  items_history_name[2]  }}</span></p>
+
 	    <a class="btn btn-outline-success" href="{{  url_for('contracts_file.manage_contracts', org_name=session['OrgName'])  }}">Back to contracts <i class="fa fa-arrow-left"></i></a>
 	    <a style="width:250px;" class="btn btn-outline-success" href="{{  url_for('contracts_file.manage_contract_items', org_name=session['OrgName'], contract_name=contract_name)  }}">Back to contract items <i class="fa fa-arrow-left"></i></a>
 	    <a class="btn btn-outline-success" href="{{  url_for('users_file.dashboard', org_name=session['OrgName'])  }}">Back to main menu <i class="fa fa-arrow-left"></i></a>
