--- a/templates/manage_contracts.html
+++ b/templates/manage_contracts.html
@@ -2,12 +2,19 @@
 
 {% block title %}Flow Vis{% endblock %}
 
-{% block navhead %}Logged in: {{  session["UserName"]  }}{% endblock %}
+
 
 {% block href %}{{  url_for('users_file.dashboard', org_name=session["OrgName"])  }}{% endblock %}
 
 {% block css %}
+<style>
+td a:hover {
+    display:block;
+    width:100%;
+    font-weight: bold;
+}
 
+</style>
 {% endblock %}
 
 {% block navbody %}
@@ -24,14 +31,12 @@
 <div class = "col-md-12">
 	<center>
 	    <h2 style="margin-top:10px;">Contracts</h2>
-	    {% if session["RoleId"] > 2 %}
+
 	    <a class="btn btn-outline-success" data-toggle="modal" data-target="#AddContract">Add a contract <i class="fa fa-plus"></i></a>
 	    <a href="{{ url_for('static', filename='reports/TemplateItems.xlsx') }}" download>Download Contract Items template</a>
 	    <a class="btn btn-outline-success" href="{{  url_for('users_file.dashboard', org_name=session['OrgName'])  }}">Back to main menu <i class="fa fa-arrow-left"></i></a>
 
-	    {% else %}
-	    <a class="btn btn-outline-success" href="{{  url_for('users_file.dashboard', org_name=session['OrgName'])  }}">Back to main menu <i class="fa fa-arrow-left"></i></a>
-	    {% endif %}
+
 	</center>
 
 
@@ -45,7 +50,9 @@
 		<th>Contract Manager</th>
 		<th>Due Date</th>
 		<th>Days left</th>
-		{% if session["RoleId"] > 2 %}
+		<th style = "display:none;">Status</th>
+		<th style = "display:none;">Notes</th>
+		{% if session["RoleId"] > 1 %}
 		<th>Edit Contract</th>
 		<th>Items Import</th>
 		{% endif %}
@@ -58,7 +65,9 @@
 		<td>Contract Manager</td>
 		<td>Due Date</td>
 		<td>Days left</td>
-		{% if session["RoleId"] > 2 %}
+		<th style = "display:none;">Status</th>
+		<th style = "display:none;">Notes</th>
+		{% if session["RoleId"] > 1 %}
 		<th></th>
 		<th></th>
 		{% endif %}
@@ -68,15 +77,17 @@
         {% for i in sp %}
 
         <tr class='clickable-row'>
-			<td><a href="{{  url_for('contracts_file.manage_contract_items', org_name=session['OrgName'], contract_name=i.Description)  }}"><div class="change">{{  i.ContractReference  }}</div></a></td>
-			<td><a href="{{  url_for('contracts_file.manage_contract_items', org_name=session['OrgName'], contract_name=i.Description)  }}"><div class="change">{{  i.Description  }}</div></a></td>
-			<td>{% if i.Total is not none %}R{{  i.Total  }}{% else %}R0{% endif %}</td>
-			<td>{% if i.PercentageCompleted is not none %}{{  i.PercentageCompleted|round  }}%{% else %}0%{% endif %}</td>
-			<td>{{  i.ContractManager  }}</td>
-			<td>{{  i.DueDate  }}</td>
-			<td {% if i.DaysLeft < 0 %}style="color:red"{% endif %}>{{  i.DaysLeft  }}</td>
-			{% if session["RoleId"] > 2 %}
-			<td style="text-align:center;"><a class="clickable" data-toggle="modal" data-target="#exampleModal{{  i.ContractId  }}"><i class="fa fa-edit change"></i></a></td>
+			<td id="ContractReference{{  i.ContractId  }}"><a href="{{  url_for('contracts_file.manage_contract_items', org_name=session['OrgName'], contract_name=i.Description)  }}">{{  i.ContractReference  }}</a></td>
+			<td id="Description{{  i.ContractId  }}"><a href="{{  url_for('contracts_file.manage_contract_items', org_name=session['OrgName'], contract_name=i.Description)  }}">{{  i.Description  }}</a></td>
+			<td id="Total{{  i.ContractId  }}"><a href="{{  url_for('contracts_file.manage_contract_items', org_name=session['OrgName'], contract_name=i.Description)  }}">{% if i.Total is not none %}R{{  i.Total  }}{% else %}R0{% endif %}</a></td>
+			<td id="PercentageCompleted{{  i.ContractId  }}"><a href="{{  url_for('contracts_file.manage_contract_items', org_name=session['OrgName'], contract_name=i.Description)  }}">{% if i.PercentageCompleted is not none %}{{  i.PercentageCompleted|round  }}%{% else %}0%{% endif %}</a></td>
+			<td id="ContractManager{{  i.ContractId  }}"><a href="{{  url_for('contracts_file.manage_contract_items', org_name=session['OrgName'], contract_name=i.Description)  }}">{{  i.ContractManager  }}</a></td>
+			<td id="DueDate{{  i.ContractId  }}"><a href="{{  url_for('contracts_file.manage_contract_items', org_name=session['OrgName'], contract_name=i.Description)  }}">{{  i.DueDate  }}</a></td>
+			<td id="DaysLeft{{  i.ContractId  }}" {% if i.DaysLeft < 0 %}style="color:red"{% endif %}>{{  i.DaysLeft  }}</td>
+			<td style = "display:none;" id="ContractStatus{{  i.ContractId  }}">{{  i.Status  }}</td>
+			<td style = "display:none;" id="Notes{{  i.ContractId  }}">{{  i.Notes  }}</td>
+			{% if session["RoleId"] > 1 %}
+			<td style="text-align:center;"><a class="clickable" data-toggle="modal" data-target="#orderModal" data-id="{{  i.ContractId  }}"><i class="fa fa-edit change"></i></a></td>
 			<form method="POST" enctype=multipart/form-data action="{{  url_for('contracts_file.manage_contracts', org_name=session['OrgName'])  }}">
 			<td style="text-align:center;">
 			    {% if i.WithItems == 0 %}
@@ -99,7 +110,7 @@
 
  </div>
 
-{% if session["RoleId"] > 2 %}
+
 <!-- Add Modal -->
 <div class="modal fade" id="AddContract" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog" role="document">
@@ -115,27 +126,27 @@
         <div class="form-group">
             <center>
             <label class="text-center">Contract Reference:</label>
-            <input style="text-align:left;" class="form-control ologin" type="text" required name="CRef" id="CRef"/>
+            <input style="text-align:left;" class="form-control qlogin" type="text" required name="CRef" id="CRef"/>
             <label class="text-center">Contract Name:</label>
-            <input style="text-align:left;" class="form-control ologin" type="text" required name="CName" id="CName"/>
+            <input style="text-align:left;" class="form-control qlogin" type="text" required name="CName" id="CName"/>
             <label class="text-center">Contract Status:</label>
-            <select class="form-control ologin" name="CStatus" id="CStatus">
+            <select class="form-control qlogin" name="CStatus" id="CStatus">
               <option value="" selected disabled></option>
               {% for i in activities_data %}
               <option value="{{  i.StatusId  }}">{{  i.Status  }}</option>
               {% endfor %}
             </select>
             <label class="text-center">Contract Manager:</label>
-            <select class="form-control ologin" name="CMan" id="CMan">
+            <select class="form-control qlogin" name="CMan" id="CMan">
               <option value="" selected disabled></option>
               {% for i in contract_managers %}
               <option value="{{  i.UserId  }}">{{  i.UserName  }}</option>
               {% endfor %}
             </select>
             <label class="text-center">Due Date:</label>
-            <input min="1899-01-01" style="text-align:left;" class="form-control ologin" type="date" required name="CDate" id="CDate"/>
+            <input min="1899-01-01" style="text-align:left;" class="form-control qlogin" type="date" required name="CDate" id="CDate"/>
             <label class="text-center">Notes:</label>
-            <textarea style="text-align:left; height:100px;" class="form-control ologin" name="CNotes" id="CNotes"></textarea>
+            <textarea style="text-align:left; height:100px;" class="form-control qlogin" name="CNotes" id="CNotes"></textarea>
             </center>
         </div>
   </div>
@@ -148,9 +159,7 @@
   </div>
 </div>
 
-<!-- Edit Modal -->
-{% for i in sp %}
-<div class="modal fade" id="exampleModal{{  i.ContractId  }}" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal fade" id="orderModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
     <form action="{{  url_for('contracts_file.manage_contracts', org_name=session['OrgName'])  }}" method="POST">
@@ -164,34 +173,32 @@
         <div class="form-group">
             <center>
             <label class="text-center">Contract Reference:</label>
-            <input type="hidden" name="ECID" id="ECID" value="{{  i.ContractId  }}"/>
-            <input class="form-control ologin" type="text" required name="ECRef" id="ECRef" value="{{  i.ContractReference  }}"/>
+            <input type="hidden" name="ECID" id="ECID" value=""/>
+            <input class="form-control qlogin" type="text" required name="ECRef" id="ECRef" value=""/>
             <label class="text-center">Contract Name:</label>
-            <input class="form-control ologin" type="text" required name="ECName" id="ECName" value="{{  i.Description  }}"/>
+            <input class="form-control qlogin" type="text" required name="ECName" id="ECName" value=""/>
             <label class="text-center">Contract Status:</label>
-            <select class="form-control ologin" name="ECStatus" id="ECStatus">
+            <select class="form-control qlogin" name="ECStatus" id="ECStatus">
+
               {% for j in activities_data %}
-              {% if i.Status == j.Status %}
-              <option value="{{  j.StatusId  }}" selected>{{  j.Status  }}</option>
-              {% else %}
               <option value="{{  j.StatusId  }}">{{  j.Status  }}</option>
-              {% endif %}
+
               {% endfor %}
             </select>
             <label class="text-center">Contract Manager:</label>
-            <select class="form-control ologin" name="ECMan" id="ECMan">
+            <select class="form-control qlogin" name="ECMan" id="ECMan">
+
               {% for j in contract_managers %}
-              {% if i.ContractManager == j.UserName %}
-              <option value="{{  j.UserId  }}" selected>{{  j.UserName  }}</option>
-              {% else %}
+
               <option value="{{  j.UserId  }}">{{  j.UserName  }}</option>
-              {% endif %}
+
+
               {% endfor %}
             </select>
             <label class="text-center">Due Date:</label>
-            <input min="1899-01-01" style="text-align:left;" class="form-control ologin" type="date" value="{{  i.DueDate  }}" required name="ECDate" id="ECDate"/>
+            <input min="1899-01-01" style="text-align:left;" class="form-control qlogin" type="date" value="" required name="ECDate" id="ECDate"/>
             <label class="text-center">Notes:</label>
-            <textarea style="text-align:left; height:100px;" class="form-control ologin" name="ECNotes" id="ECNotes">{{  i.Notes  }}</textarea>
+            <textarea style="text-align:left; height:100px;" class="form-control qlogin" name="ECNotes" id="ECNotes"></textarea>
             </center>
         </div>
   </div>
@@ -203,8 +210,8 @@
     </div>
   </div>
 </div>
-{% endfor %}
-{% endif %}
+
+
 {% for i in sp %}
 <script>
 $(function(){
@@ -222,6 +229,30 @@ $(function(){
 
 </script>
 {% endfor %}
+
+<script>
+$('#orderModal').on('show.bs.modal', function (event) {
+    var button = $(event.relatedTarget);
+    var ConID = button.data('id');
+    var ContractReference = $("#ContractReference" + ConID).text();
+    var Description = $("#Description" + ConID).text();
+    var Total = $("#Total" + ConID).text();
+    var PercentageCompleted = $("#PercentageCompleted" + ConID).text();
+    var ContractManager = $("#ContractManager" + ConID).text();
+    var DueDate = $("#DueDate" + ConID).text();
+    var ContractStatus = $("#Status" + ConID).text();
+    var Notes = $("#Notes" + ConID).text();
+
+    var modal = $(this);
+    modal.find('#ECID').val(ConID);
+    modal.find('#ECRef').val(ContractReference);
+    modal.find('#ECName').val(Description);
+    modal.find('#ECDate').val(DueDate);
+    modal.find('#ECNotes').val(Notes);
+
+
+});
+</script>
 
 <script>
 $(document).ready(function() {
